Closed Bug 269697 Opened 21 years ago Closed 21 years ago

[FIXr]<area> error reporting should use nsContentUtils

Categories

(Core :: Layout, defect, P2)

x86
Linux
defect

Tracking

()

RESOLVED FIXED
mozilla1.8alpha6

People

(Reporter: bzbarsky, Assigned: bzbarsky)

Details

Attachments

(1 file)

Less code duplication is good.
Priority: -- → P2
Summary: <area> error reporting should use nsContentUtils → [FIX]<area> error reporting should use nsContentUtils
Target Milestone: --- → mozilla1.8alpha5
Attached patch PatchSplinter Review
Comment on attachment 165834 [details] [diff] [review] Patch jst, would you review?
Attachment #165834 - Flags: superreview?(jst)
Attachment #165834 - Flags: review?(jst)
Comment on attachment 165834 [details] [diff] [review] Patch r+sr=jst
Attachment #165834 - Flags: superreview?(jst)
Attachment #165834 - Flags: superreview+
Attachment #165834 - Flags: review?(jst)
Attachment #165834 - Flags: review+
Summary: [FIX]<area> error reporting should use nsContentUtils → [FIXr]<area> error reporting should use nsContentUtils
Fixed on trunk.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Target Milestone: mozilla1.8alpha5 → mozilla1.8alpha6
Product: Core → Core Graveyard
Component: Layout: Misc Code → Layout
Product: Core Graveyard → Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: