Use nsContentUtils for error-reporting for <area> parsing.  Bug 269697, r+sr=jst